Card Live Data does not correctly handle eager reclaim

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b120

      Between the remark and cleanup pauses card live data is created based off recent marking.

      During that phase regions might be reclaimed (e.g. eager reclaim), so the card live data at the end is not up to date wrt to that. The card live data contains too many bits for these regions.

      Make sure that card live data is completely correct and also tighten the verification accordingly.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: