8153170: Card Live Data does not correctly handle eager reclaim

The card live data of regions eagerly reclaimed during remark and cleanup pause could be wrong, not considering that these regions were eagerly reclaimed and empty.

Reviewed-by: drwhite, kbarrett